deploy/k8s/nginx-test-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo
        args: ["-listen=:8080","-text=OK"]
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: utilities
spec:
  selector:
    app: backend
  ports:
  - port: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: utilities
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:

      # ======================
      # NGINX CONTAINER
      # ======================
      - name: nginx
        image: docker.io/hellodk/avika-agent:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf


      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: utilities
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 32767

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator
  template:
    metadata:
      labels:
        app: traffic-generator
    spec:
      containers:
      - name: traffic
        image: curlimages/curl:latest
        command: ["/bin/sh","-c"]
        args:
          - |
            while true; do
              for i in 1 2 3 4 5; do
                curl -s http://nginx/ > /dev/null;
                curl -s -X POST http://nginx/ -d "load=$RANDOM" > /dev/null;
                curl -s -X PUT http://nginx/ -d "update=$RANDOM" > /dev/null;
              done;
              sleep 0.2;
            done
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-traffic-generator
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app: global-traffic-generator
  template:
    metadata:
      labels:
        app: global-traffic-generator
    spec:
      containers:
      - name: traffic
        image: curlimages/curl:latest
        command: ["/bin/sh","-c"]
        args:
          - |
            [...]
